tests/reference/asr_preprocess-cpp7-cec734d.stderr
tests/errors/cpp7.f90:116:21 semantic error: Variable 'z12' not declared
    print *, "1aa", z12, 5
                    ^~~
